src/objects/PatronTicket__TicketableEvent__c.object
<CustomObject>
    <fields>
        <fullName>Duration_hours__c</fullName>
        <description>Runtime of show</description>
        <label>Duration (hours)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteer_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volunteer Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Ticketable Events</relationshipLabel>
        <relationshipName>Ticketable_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer_Notes__c</fullName>
        <label>Volunteer Notes</label>
        <type>TextArea</type>
    </fields>
</CustomObject>